2012-08-18 Dominik Reichardt <dominus@users.sourceforge.net>
	* configure.ac, makefile.am: added configure "--with-macosx-code-signature=identity"
	  for using an ID to codesign the Mac OS X bundle. The default identity is
	  "Developer ID Application".
	  
2012-07-06	Malignant Manor <malignantmanor@users.sourceforge.net>
	* actors.cc: Have party members fight back if Avatar is disabled,
		not in combat mode, and a party member is hit. The original only
		switched to combat mode when the Avatar got hit.
		Fix use of || instead of && that has any actor schedule seek foes
	* gumps/Spellbook_gump.cc: fix character size
	* usecode/ucinternal.cc: fix array size

2012-06-15	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* all: Updating Gnome shp thumbnailer to work on Gnome 3.

2012-06-12	 Malignant Manor <malignantmanor@users.sourceforge.net>
	* mapedit/shapeedit.cc: Fix spot frame editing for helmet
	  Fix alt frames editing for ammo, rings, and torso

2012-05-31 Dominik Reichardt <dominus@users.sourceforge.net>
	* configure.ac, imagewin/imagewin.cc, imagewin/scale_hq*.*: Added
	  configure option --enable-all-hq-scalers, --enable-hq2x, --enable-hq3x,
	  --enable-hq4x. This makes it easier to leave out HQ scalers for quicker
	  compiles, when you need to test things. By default all HQ scalers are 
	  enabled.

2012-05-30	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* actor.cc: Fixed bug #3530273: cannot switch bodies with Petra.
	* content/sifixes/src/header/si/si_externals.uc: Out of synch comment.
	
2012-05-04	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* objs/chunks.cc: Changed ints->bools.
	* objs/objs.cc: Fixed memory leak caused by non-deletion of terrain game
	  objects on cache-out.
	* objs/objlist.h: Removed theoretical object list corruption bug.

2012-04-15	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Keyring: Merged in the rollable carpet mod.
	* SI Fixes: Ankh-less ship sails since there is little reason for the locals